--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
   include 'openxp.lib:htmlexporter:1.0.0'
   include 'com.enonic.lib:lib-cache:2.1.1'
   include 'com.enonic.lib:lib-util:3.0.0'
-  include 'com.kostirpg.lib:user:0.1.2'
+  include 'com.kostirpg.lib:user:0.1.0'
   include 'com.kostirpg.lib:cart:0.1.1'
   include 'com.kostirpg.lib:festival:1.0.0'
 
@@ -53,5 +53,8 @@ repositories {
   }
   maven {
     url 'https://dl.bintray.com/openxp/public'
+  }
+  maven {
+    url 'https://openxp.jfrog.io/artifactory/public'
   }
 }
