--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,9 @@ dependencies {
   include 'openxp.lib:htmlexporter:1.0.0'
   include 'com.enonic.lib:lib-cache:2.1.1'
   include 'com.enonic.lib:lib-util:3.0.0'
-  implementation 'com.github.maxYurchenko:kostirpg-users:-38adef652e-1'
-  implementation 'com.github.maxYurchenko:kostirpg-store:-a47f160008-1'
-  implementation 'com.github.maxYurchenko:kostirpg-festival:-2cb98c2f41-1'
+  include 'com.kostirpg.lib:user:0.1.0'
+  include 'com.kostirpg.lib:cart:0.1.1'
+  include 'com.kostirpg.lib:festival:1.0.0'
 
   // https://mvnrepository.com/artifact/commons-codec/commons-codec
   compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
@@ -59,4 +59,5 @@ repositories {
   maven {
     url 'https://openxp.jfrog.io/artifactory/public'
   }
+  mavenLocal()
 }
