--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -1,6 +1,6 @@
 # Gradle Project settings
 projectName = kosti
-version = 1.0.0-SNAPSHOT
+version = 1.0.0
 
 # XP App values
 appDisplayName = Kosti RPG
