--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,9 @@ dependencies {
   compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
 
   include 'com.github.maxYurchenko:kostirpg-store:0.1.1'
-  include 'com.github.maxYurchenko:kostirpg-festival:0.1.2'
-  include 'com.github.maxYurchenko:kostirpg-users:0.1.0'
-  //include 'com.kostirpg.lib:cart:0.1.1'
+  include 'com.github.maxYurchenko:kostirpg-festival:0.1.3'
+  //include 'com.github.maxYurchenko:kostirpg-users:0.1.0'
+  include 'com.kostirpg.lib:user:0.1.1'
 }
 
 repositories {
