--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
   compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
   compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
 
-  include 'com.github.maxYurchenko:kostirpg-store:0.1.1'
+  //include 'com.github.maxYurchenko:kostirpg-store:0.1.1'
+  include 'com.kostirpg.lib:cart:0.1.2'
   include 'com.github.maxYurchenko:kostirpg-festival:0.1.3'
   //include 'com.github.maxYurchenko:kostirpg-users:0.1.0'
   include 'com.kostirpg.lib:user:0.1.1'
