--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,15 +36,16 @@ dependencies {
   compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
   compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
 
-  include 'com.github.maxYurchenko:kostirpg-store:0.1.18'
-  include 'com.github.maxYurchenko:kostirpg-festival:0.1.31'
-  include 'com.github.maxYurchenko:kostirpg-users:0.1.3'
-  //include 'com.kostirpg.lib:user:0.1.1'
-  //include 'com.kostirpg.lib:festival:0.1.2'
-  //include 'com.kostirpg.lib:cart:0.1.3'
+  include 'com.github.maxYurchenko:kostirpg-store:0.1.23'
+  include 'com.github.maxYurchenko:kostirpg-festival:0.1.37'
+  include 'com.github.maxYurchenko:kostirpg-users:0.1.4'
+  include 'com.kostirpg.lib:user:0.1.1'
+  include 'com.kostirpg.lib:festival:0.1.2'
+  include 'com.kostirpg.lib:cart:0.1.3'
 }
 
 repositories {
+  mavenLocal()
   jcenter()
   xp.enonicRepo()
   maven { 
@@ -59,5 +60,4 @@ repositories {
   maven {
     url 'https://dl.bintray.com/openxp/public'
   }
-  mavenLocal()
 }
