--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ dependencies {
   include 'com.github.maxYurchenko:kostirpg-store:0.1.23'
   include 'com.github.maxYurchenko:kostirpg-festival:0.1.37'
   include 'com.github.maxYurchenko:kostirpg-users:0.1.4'
-  include 'com.kostirpg.lib:user:0.1.1'
-  include 'com.kostirpg.lib:festival:0.1.2'
-  include 'com.kostirpg.lib:cart:0.1.3'
+  //include 'com.kostirpg.lib:user:0.1.1'
+  //include 'com.kostirpg.lib:festival:0.1.2'
+  ////include 'com.kostirpg.lib:cart:0.1.3'
 }
 
 repositories {
