--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,12 @@ dependencies {
   compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
   compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
 
-  include 'com.github.maxYurchenko:kostirpg-store:0.1.23'
-  include 'com.github.maxYurchenko:kostirpg-festival:0.1.37'
-  include 'com.github.maxYurchenko:kostirpg-users:0.1.4'
+  include 'com.github.maxYurchenko:kostirpg-store:0.1.24'
+  include 'com.github.maxYurchenko:kostirpg-festival:0.1.38'
+  include 'com.github.maxYurchenko:kostirpg-users:0.1.6'
   //include 'com.kostirpg.lib:user:0.1.1'
   //include 'com.kostirpg.lib:festival:0.1.2'
-  ////include 'com.kostirpg.lib:cart:0.1.3'
+  //include 'com.kostirpg.lib:cart:0.1.3'
 }
 
 repositories {
